--- a/.github/workflows/scrape-odds.yml
+++ b/.github/workflows/scrape-odds.yml
@@ -2,14 +2,10 @@ name: Scrape Soccer Odds
 
 on:
   schedule:
-    # Run every 6 hours
     - cron: '0 */6 * * *'
   workflow_dispatch:
 
 jobs:
-  # ============================================
-  # EUROPE - Major Leagues
-  # ============================================
   europe-major:
     runs-on: ubuntu-latest
     timeout-minutes: 25
@@ -68,9 +64,6 @@ jobs:
           path: data/*.json
           retention-days: 1
 
-  # ============================================
-  # EUROPE - Secondary Leagues
-  # ============================================
   europe-secondary:
     runs-on: ubuntu-latest
     timeout-minutes: 25
@@ -129,9 +122,6 @@ jobs:
           path: data/*.json
           retention-days: 1
 
-  # ============================================
-  # EUROPE - Smaller Leagues
-  # ============================================
   europe-small:
     runs-on: ubuntu-latest
     timeout-minutes: 25
@@ -161,7 +151,7 @@ jobs:
           python src/main.py scrape_upcoming \
             --sport football \
             --date ${{ steps.dates.outputs.TODAY }} \
-            --leagues ligat-haal,first-division,parva-liga,super-league-albania,premijer-liga-bih,vysshaya-liga,a-lyga,virsliga,meistriliiga,1-hnl,prva-liga,nifl-premiership,cymru-premier,ligue-1-tunisia,botola-pro-2,ghana-premier-league \
+            --leagues ligat-haal,first-division,parva-liga,super-league-albania,premijer-liga-bih,vysshaya-liga,a-lyga,virsliga,meistriliiga,prva-liga,nifl-premiership,cymru-premier \
             --markets 1x2,over_under,btts \
             --headless \
             --file_path data/europe_small_today.json \
@@ -176,7 +166,7 @@ jobs:
           python src/main.py scrape_upcoming \
             --sport football \
             --date ${{ steps.dates.outputs.TOMORROW }} \
-            --leagues ligat-haal,first-division,parva-liga,super-league-albania,premijer-liga-bih,vysshaya-liga,a-lyga,virsliga,meistriliiga,1-hnl,prva-liga,nifl-premiership,cymru-premier,ligue-1-tunisia,botola-pro-2,ghana-premier-league \
+            --leagues ligat-haal,first-division,parva-liga,super-league-albania,premijer-liga-bih,vysshaya-liga,a-lyga,virsliga,meistriliiga,prva-liga,nifl-premiership,cymru-premier \
             --markets 1x2,over_under,btts \
             --headless \
             --file_path data/europe_small_tomorrow.json \
@@ -190,9 +180,6 @@ jobs:
           path: data/*.json
           retention-days: 1
 
-  # ============================================
-  # UEFA COMPETITIONS
-  # ============================================
   uefa:
     runs-on: ubuntu-latest
     timeout-minutes: 20
@@ -251,9 +238,6 @@ jobs:
           path: data/*.json
           retention-days: 1
 
-  # ============================================
-  # AMERICAS - North & Central
-  # ============================================
   americas-north:
     runs-on: ubuntu-latest
     timeout-minutes: 25
@@ -283,7 +267,7 @@ jobs:
           python src/main.py scrape_upcoming \
             --sport football \
             --date ${{ steps.dates.outputs.TODAY }} \
-            --leagues mls,usl-championship,liga-mx,liga-expansion-mx,cpl,concacaf-champions-cup,concacaf-league,liga-nacional-guatemala,primera-division-costa-rica,liga-primera-nicaragua,primera-division-el-salvador,liga-nacional-honduras \
+            --leagues mls,usl-championship,liga-mx,liga-expansion-mx,cpl,concacaf-champions-cup,concacaf-league,liga-nacional-guatemala,primera-division-costa-rica \
             --markets 1x2,over_under,btts \
             --headless \
             --file_path data/americas_north_today.json \
@@ -298,7 +282,7 @@ jobs:
           python src/main.py scrape_upcoming \
             --sport football \
             --date ${{ steps.dates.outputs.TOMORROW }} \
-            --leagues mls,usl-championship,liga-mx,liga-expansion-mx,cpl,concacaf-champions-cup,concacaf-league,liga-nacional-guatemala,primera-division-costa-rica,liga-primera-nicaragua,primera-division-el-salvador,liga-nacional-honduras \
+            --leagues mls,usl-championship,liga-mx,liga-expansion-mx,cpl,concacaf-champions-cup,concacaf-league,liga-nacional-guatemala,primera-division-costa-rica \
             --markets 1x2,over_under,btts \
             --headless \
             --file_path data/americas_north_tomorrow.json \
@@ -312,9 +296,6 @@ jobs:
           path: data/*.json
           retention-days: 1
 
-  # ============================================
-  # AMERICAS - South
-  # ============================================
   americas-south:
     runs-on: ubuntu-latest
     timeout-minutes: 25
@@ -344,7 +325,7 @@ jobs:
           python src/main.py scrape_upcoming \
             --sport football \
             --date ${{ steps.dates.outputs.TODAY }} \
-            --leagues serie-a-brazil,serie-b-brazil,copa-do-brasil,primera-division-argentina,primera-nacional,copa-argentina,liga-profesional-chile,primera-b-chile,liga-betplay,liga-1-peru,ligapro-ecuador,primera-division-uruguay,primera-division-paraguay,primera-division-venezuela,primera-division-bolivia,copa-libertadores,copa-sudamericana \
+            --leagues serie-a-brazil,serie-b-brazil,copa-do-brasil,primera-division-argentina,primera-nacional,liga-profesional-chile,liga-betplay,liga-1-peru,ligapro-ecuador,primera-division-uruguay,primera-division-paraguay,copa-libertadores,copa-sudamericana \
             --markets 1x2,over_under,btts \
             --headless \
             --file_path data/americas_south_today.json \
@@ -359,7 +340,7 @@ jobs:
           python src/main.py scrape_upcoming \
             --sport football \
             --date ${{ steps.dates.outputs.TOMORROW }} \
-            --leagues serie-a-brazil,serie-b-brazil,copa-do-brasil,primera-division-argentina,primera-nacional,copa-argentina,liga-profesional-chile,primera-b-chile,liga-betplay,liga-1-peru,ligapro-ecuador,primera-division-uruguay,primera-division-paraguay,primera-division-venezuela,primera-division-bolivia,copa-libertadores,copa-sudamericana \
+            --leagues serie-a-brazil,serie-b-brazil,copa-do-brasil,primera-division-argentina,primera-nacional,liga-profesional-chile,liga-betplay,liga-1-peru,ligapro-ecuador,primera-division-uruguay,primera-division-paraguay,copa-libertadores,copa-sudamericana \
             --markets 1x2,over_under,btts \
             --headless \
             --file_path data/americas_south_tomorrow.json \
@@ -373,9 +354,6 @@ jobs:
           path: data/*.json
           retention-days: 1
 
-  # ============================================
-  # ASIA - East
-  # ============================================
   asia-east:
     runs-on: ubuntu-latest
     timeout-minutes: 25
@@ -405,7 +383,7 @@ jobs:
           python src/main.py scrape_upcoming \
             --sport football \
             --date ${{ steps.dates.outputs.TODAY }} \
-            --leagues j1-league,j2-league,j3-league,k-league-1,k-league-2,chinese-super-league,china-league-one,hong-kong-premier-league,v-league-1,thai-league,malaysian-super-league,singapore-premier-league,indonesia-liga-1,afc-champions-league,afc-cup \
+            --leagues j1-league,j2-league,j3-league,k-league-1,k-league-2,chinese-super-league,v-league-1,thai-league,malaysian-super-league,singapore-premier-league,indonesia-liga-1,afc-champions-league \
             --markets 1x2,over_under,btts \
             --headless \
             --file_path data/asia_east_today.json \
@@ -420,7 +398,7 @@ jobs:
           python src/main.py scrape_upcoming \
             --sport football \
             --date ${{ steps.dates.outputs.TOMORROW }} \
-            --leagues j1-league,j2-league,j3-league,k-league-1,k-league-2,chinese-super-league,china-league-one,hong-kong-premier-league,v-league-1,thai-league,malaysian-super-league,singapore-premier-league,indonesia-liga-1,afc-champions-league,afc-cup \
+            --leagues j1-league,j2-league,j3-league,k-league-1,k-league-2,chinese-super-league,v-league-1,thai-league,malaysian-super-league,singapore-premier-league,indonesia-liga-1,afc-champions-league \
             --markets 1x2,over_under,btts \
             --headless \
             --file_path data/asia_east_tomorrow.json \
@@ -434,9 +412,6 @@ jobs:
           path: data/*.json
           retention-days: 1
 
-  # ============================================
-  # ASIA - West & Middle East
-  # ============================================
   asia-west:
     runs-on: ubuntu-latest
     timeout-minutes: 25
@@ -466,7 +441,7 @@ jobs:
           python src/main.py scrape_upcoming \
             --sport football \
             --date ${{ steps.dates.outputs.TODAY }} \
-            --leagues saudi-pro-league,saudi-first-division,stars-league,uae-pro-league,uae-first-division,kuwait-premier-league,bahrain-premier-league,oman-professional-league,iraqi-premier-league,persian-gulf-pro-league,indian-super-league,i-league,uzbekistan-super-league,kazakhstan-premier-league \
+            --leagues saudi-pro-league,stars-league,uae-pro-league,kuwait-premier-league,bahrain-premier-league,iraqi-premier-league,persian-gulf-pro-league,indian-super-league,i-league,uzbekistan-super-league,kazakhstan-premier-league \
             --markets 1x2,over_under,btts \
             --headless \
             --file_path data/asia_west_today.json \
@@ -481,7 +456,7 @@ jobs:
           python src/main.py scrape_upcoming \
             --sport football \
             --date ${{ steps.dates.outputs.TOMORROW }} \
-            --leagues saudi-pro-league,saudi-first-division,stars-league,uae-pro-league,uae-first-division,kuwait-premier-league,bahrain-premier-league,oman-professional-league,iraqi-premier-league,persian-gulf-pro-league,indian-super-league,i-league,uzbekistan-super-league,kazakhstan-premier-league \
+            --leagues saudi-pro-league,stars-league,uae-pro-league,kuwait-premier-league,bahrain-premier-league,iraqi-premier-league,persian-gulf-pro-league,indian-super-league,i-league,uzbekistan-super-league,kazakhstan-premier-league \
             --markets 1x2,over_under,btts \
             --headless \
             --file_path data/asia_west_tomorrow.json \
@@ -495,9 +470,6 @@ jobs:
           path: data/*.json
           retention-days: 1
 
-  # ============================================
-  # AFRICA & OCEANIA
-  # ============================================
   africa-oceania:
     runs-on: ubuntu-latest
     timeout-minutes: 25
@@ -527,7 +499,7 @@ jobs:
           python src/main.py scrape_upcoming \
             --sport football \
             --date ${{ steps.dates.outputs.TODAY }} \
-            --leagues premier-league-egypt,botola-pro,ligue-1-tunisia,premier-soccer-league,dstv-premiership,national-first-division,premier-league-algeria,ligue-1-senegal,ghana-premier-league,npfl,kenyan-premier-league,caf-champions-league,caf-confederation-cup,a-league,a-league-women,nz-premiership \
+            --leagues premier-league-egypt,botola-pro,ligue-1-tunisia,premier-soccer-league,premier-league-algeria,ghana-premier-league,npfl,caf-champions-league,caf-confederation-cup,a-league \
             --markets 1x2,over_under,btts \
             --headless \
             --file_path data/africa_oceania_today.json \
@@ -542,7 +514,7 @@ jobs:
           python src/main.py scrape_upcoming \
             --sport football \
             --date ${{ steps.dates.outputs.TOMORROW }} \
-            --leagues premier-league-egypt,botola-pro,ligue-1-tunisia,premier-soccer-league,dstv-premiership,national-first-division,premier-league-algeria,ligue-1-senegal,ghana-premier-league,npfl,kenyan-premier-league,caf-champions-league,caf-confederation-cup,a-league,a-league-women,nz-premiership \
+            --leagues premier-league-egypt,botola-pro,ligue-1-tunisia,premier-soccer-league,premier-league-algeria,ghana-premier-league,npfl,caf-champions-league,caf-confederation-cup,a-league \
             --markets 1x2,over_under,btts \
             --headless \
             --file_path data/africa_oceania_tomorrow.json \
@@ -556,9 +528,6 @@ jobs:
           path: data/*.json
           retention-days: 1
 
-  # ============================================
-  # MERGE ALL RESULTS
-  # ============================================
   merge:
     needs: [europe-major, europe-secondary, europe-small, uefa, americas-north, americas-south, asia-east, asia-west, africa-oceania]
     runs-on: ubuntu-latest
@@ -575,164 +544,7 @@ jobs:
           path: artifacts
       
       - name: Merge all odds files
-        run: |
-          mkdir -p data
-          python << 'EOF'
-import json
-import os
-from datetime import datetime
-
-all_matches = []
-seen = set()
-
-# Walk through all artifact directories
-for root, dirs, files in os.walk('artifacts'):
-    for file in files:
-        if file.endswith('.json'):
-            filepath = os.path.join(root, file)
-            print(f"Processing: {filepath}")
-            try:
-                with open(filepath, 'r') as f:
-                    data = json.load(f)
-                
-                # Handle different data structures
-                matches = []
-                if isinstance(data, list):
-                    matches = data
-                elif isinstance(data, dict):
-                    if 'matches' in data:
-                        matches = data['matches']
-                    elif 'data' in data:
-                        matches = data['data']
-                    else:
-                        matches = [data]
-                
-                for match in matches:
-                    if not isinstance(match, dict):
-                        continue
-                    
-                    # Extract team names
-                    home = match.get('home_team') or match.get('home') or match.get('homeTeam', '')
-                    away = match.get('away_team') or match.get('away') or match.get('awayTeam', '')
-                    
-                    if not home or not away:
-                        continue
-                    
-                    # Create unique key
-                    key = f"{home}|{away}".lower()
-                    if key in seen:
-                        continue
-                    seen.add(key)
-                    
-                    # Extract odds - comprehensive handling
-                    odds = {}
-                    
-                    # Check for 'odds' key
-                    if 'odds' in match:
-                        raw_odds = match['odds']
-                        if isinstance(raw_odds, dict):
-                            odds = raw_odds
-                    
-                    # Check for 'markets' key
-                    if 'markets' in match:
-                        markets = match['markets']
-                        if isinstance(markets, dict):
-                            odds = markets
-                        elif isinstance(markets, list):
-                            for m in markets:
-                                market_name = m.get('name', '').lower()
-                                market_type = m.get('type', '').lower()
-                                
-                                if market_name == '1x2' or market_type == 'h2h':
-                                    odds['h2h'] = m.get('odds', {})
-                                elif 'over' in market_name or 'total' in market_type:
-                                    odds['totals'] = m.get('odds', {})
-                                elif 'btts' in market_name or 'both' in market_name:
-                                    odds['btts'] = m.get('odds', {})
-                    
-                    # Check for 'bookmakers' key (API format)
-                    if 'bookmakers' in match and not odds:
-                        for bm in match.get('bookmakers', []):
-                            for market in bm.get('markets', []):
-                                market_key = market.get('key', '')
-                                outcomes = market.get('outcomes', [])
-                                
-                                if market_key == 'h2h':
-                                    h2h = {}
-                                    for o in outcomes:
-                                        if o.get('name') == home:
-                                            h2h['home'] = o.get('price')
-                                        elif o.get('name') == away:
-                                            h2h['away'] = o.get('price')
-                                        elif o.get('name') == 'Draw':
-                                            h2h['draw'] = o.get('price')
-                                    if h2h:
-                                        odds['h2h'] = h2h
-                                        
-                                elif market_key == 'totals':
-                                    totals = {}
-                                    for o in outcomes:
-                                        if 'Over' in o.get('name', ''):
-                                            totals['over'] = o.get('price')
-                                            totals['line'] = o.get('point', 2.5)
-                                        elif 'Under' in o.get('name', ''):
-                                            totals['under'] = o.get('price')
-                                    if totals:
-                                        odds['totals'] = totals
-                            if odds:
-                                break
-                    
-                    # Direct odds fields
-                    if not odds.get('h2h'):
-                        if all(k in match for k in ['home_odds', 'draw_odds', 'away_odds']):
-                            odds['h2h'] = {
-                                'home': match['home_odds'],
-                                'draw': match['draw_odds'],
-                                'away': match['away_odds']
-                            }
-                        elif '1' in match and 'X' in match and '2' in match:
-                            odds['h2h'] = {
-                                'home': match['1'],
-                                'draw': match['X'],
-                                'away': match['2']
-                            }
-                    
-                    # Get commence time
-                    commence = match.get('commence_time') or match.get('date') or match.get('datetime') or match.get('start_time', '')
-                    
-                    # Get league
-                    league = match.get('league') or match.get('competition') or match.get('tournament', 'Unknown')
-                    
-                    normalized = {
-                        'home_team': home,
-                        'away_team': away,
-                        'commence_time': commence,
-                        'league': league,
-                        'markets': odds if odds else {'h2h': {}}
-                    }
-                    
-                    all_matches.append(normalized)
-                    
-            except Exception as e:
-                print(f"Error processing {filepath}: {e}")
-                continue
-
-# Sort by commence time
-all_matches.sort(key=lambda x: x.get('commence_time', ''))
-
-output = {
-    'updated_at': datetime.utcnow().isoformat() + 'Z',
-    'source': 'oddsharvester',
-    'match_count': len(all_matches),
-    'matches': all_matches
-}
-
-os.makedirs('data', exist_ok=True)
-with open('data/odds.json', 'w') as f:
-    json.dump(output, f, indent=2)
-
-print(f"\n✅ Merged {len(all_matches)} unique matches")
-EOF
+        run: python scripts/merge_odds.py
       
       - name: Upload odds to Gist
         uses: exuanbo/actions-deploy-gist@v1
